Fix toast padding on mobile

--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -67,3 +67,7 @@
 .p-dialog {
   @apply m-8 max-w-xl;
 }
+
+.p-toast {
+  @apply px-8;
+}
